<resources>
    <string name="app_name">TestTaskMusicShop</string>
    <string name="your_name">Your Name</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="orderprice">OrderPrice</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="null_0">0</string>
    <string name="null_dollars">0 $</string>
    <string name="select_item">Select Item</string>
    <string name="send">Send</string>
</resources>
